--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,7 +12,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: git-pr-release
-      uses: bakunyo/git-pr-release-action@master
+      uses: bakunyo/git-pr-release-action@v1.3
       env:
         GIT_PR_RELEASE_BRANCH_STAGING: devel
         GITHUB_TOKEN: ${{ secrets.TOKEN }}
