--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,10 +8,11 @@ jobs:
     name: git-pr-release
     runs-on: ubuntu-latest
     steps:
-    - name: add safe directory
+    - name: checkout
       uses: actions/checkout@master
       with:
         fetch-depth: 0
+    - name: add safe directory
       run: git config --global --add safe.directory $(pwd)
     - name: git-pr-release
       uses: bakunyo/git-pr-release-action@v1.3
