--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,25 +1,53 @@
+# https://github.com/bakunyo/git-pr-release-action/issues/15
+# name: Create PR from devel to main
+# on:
+#   push:
+#     branches:
+#       - devel
+# jobs:
+#   gitPrRelease:
+#     name: git-pr-release
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: checkout
+#       uses: actions/checkout@master
+#       with:
+#         fetch-depth: 0
+#     - name: add safe directory
+#       run: |
+#         git config --global --add safe.directory $(pwd)
+#         echo $(pwd)
+#       working-directory: ./test-release
+#     - name: git-pr-release
+#       uses: bakunyo/git-pr-release-action@v1.3
+#       env:
+#         GIT_PR_RELEASE_BRANCH_STAGING: devel
+#         GIT_PR_RELEASE_BRANCH_PRODUCTION: main
+#         GITHUB_TOKEN: ${{ secrets.TOKEN }}
 name: Create PR from devel to main
 on:
   push:
     branches:
       - devel
 jobs:
-  gitPrRelease:
-    name: git-pr-release
+  create-release-pr:
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@master
+    - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: add safe directory
+
+    - name: Set up Ruby 2.6
+      uses: actions/setup-ruby@v1
+      with:
+        ruby-version: 2.6.x
+
+    - name: Create a release pull request
+      env:
+        GIT_PR_RELEASE_TOKEN: ${{ secrets.TOKEN }}
+        GIT_PR_RELEASE_BRANCH_PRODUCTION: main
+        GIT_PR_RELEASE_BRANCH_STAGING: devel
       run: |
         git config --global --add safe.directory $(pwd)
-        echo $(pwd)
-      working-directory: ./test-release
-    - name: git-pr-release
-      uses: bakunyo/git-pr-release-action@v1.3
-      env:
-        GIT_PR_RELEASE_BRANCH_STAGING: devel
-        GIT_PR_RELEASE_BRANCH_PRODUCTION: main
-        GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        gem install -N git-pr-release -v "1.2.0"
+        git-pr-release --no-fetch
