--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -37,10 +37,10 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up Ruby 2.6
-      uses: actions/setup-ruby@v1
+    - name: Set up Ruby 2.7
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.6.x
+        ruby-version: 2.7
 
     - name: Create a release pull request
       env:
