--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -37,10 +37,10 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Set up Ruby 2.7
+    - name: Set up Ruby 3.0
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.7
+        ruby-version: 3.0
 
     - name: Create a release pull request
       env:
@@ -48,6 +48,6 @@ jobs:
         GIT_PR_RELEASE_BRANCH_PRODUCTION: main
         GIT_PR_RELEASE_BRANCH_STAGING: devel
       run: |
-        git config --global --add safe.directory $(pwd)
-        gem install -N git-pr-release -v "1.2.0"
+#        git config --global --add safe.directory $(pwd)
+        gem install -N git-pr-release
         git-pr-release --no-fetch
