--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -41,13 +41,12 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 3.0
-
+        bundler-cache: true
     - name: Create a release pull request
       env:
         GIT_PR_RELEASE_TOKEN: ${{ secrets.TOKEN }}
         GIT_PR_RELEASE_BRANCH_PRODUCTION: main
         GIT_PR_RELEASE_BRANCH_STAGING: devel
       run: |
-#        git config --global --add safe.directory $(pwd)
         gem install -N git-pr-release
         git-pr-release --no-fetch
