--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -44,7 +44,7 @@ jobs:
         bundler-cache: true
     - name: Create a release pull request
       env:
-        GIT_PR_RELEASE_TOKEN: ${{ secrets.TOKEN }}
+        GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GIT_PR_RELEASE_BRANCH_PRODUCTION: main
         GIT_PR_RELEASE_BRANCH_STAGING: devel
       run: |
