--- a/.github/workflows/create-issue.yaml
+++ b/.github/workflows/create-issue.yaml
@@ -4,10 +4,10 @@ on:
     paths:
     - '.gitignore'
 
-permissions:
-  id-token: write
-  contents: read
-  actions: read
+#permissions:
+#  id-token: write
+#  contents: read
+#  actions: read
 
 jobs:
   create_issue:
