--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - run: |
+          git tag $GITHUB_REF_NAME
+          git push origin $GITHUB_REF_NAME
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
