--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,12 @@
 name: Create Release
 
 on:
+  workflow_dispatch:
   pull_request:
     branches:
       - 'release/*'
-    types: [closed]
+    types:
+      - closed
 
 jobs:
   create-release:
