--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
 name: Create Release
 
 on:
-  workflow_dispatch:
-  push:
+  pull_request:
     branches:
       - 'release/v**'
+    types: [closed]
 
 jobs:
   create-release:
