--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,9 +8,9 @@ on:
 
 jobs:
   create-release:
-    if ${{ github.ref == 'refs/heads/release/**' }}
-    name: Create release
     runs-on: ubuntu-latest
+    name: Create release
+    if: ${{ github.ref == 'refs/heads/release/**' }}
     steps:
       - uses: actions/checkout@v3
         with:
