--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
     name: Create release
-    if: ${{ github.ref == 'refs/heads/release/**' }}
+    if: contains(github.ref, 'release')
     steps:
       - uses: actions/checkout@v3
         with:
