--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,15 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - run: |
-          git tag $GITHUB_REF_NAME
-          git push origin $GITHUB_REF_NAME
+      - name: Extract version
+        id: extract_version
+        run: |
+          echo "::set-output name=version::${GITHUB_REF/refs\/heads\/release/}"
+      - name: Create tag
+        id: create_tag
+        run: |
+          git tag ${{ steps.extract_version.outputs.version }}
+          git push origin ${{ steps.extract_version.outputs.version }}
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
