--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,4 +28,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
-          name: $GITHUB_REF_NAME
+          name: ${{ steps.extract_version.outputs.version }}
